# pump-opt

./: README.md  bep_proxy_proff.py  debug_gaussian_test.py  debug_proxy.py  debug_proxy_commercial.py  gaussian_optimization_example.py  main.py  proxy_analysis.py  proxy_head_sensitivity.py  proxy_proof.py  pyproject.toml  simple_experiments.py  simplified_experiments.py  summarize.py
backup/: debug_proxy_commercial.py
output/experiments/20250918_001944/: 001944_proxy_validation_volumetric_efficiency.json  001944_proxy_validation_volumetric_efficiency.pkl
output/experiments/20250918_002141/: 002141_proxy_validation_volumetric_efficiency.json  002141_proxy_validation_volumetric_efficiency.pkl
output/experiments/20250918_002201/: 002201_proxy_validation_volumetric_efficiency.json  002201_proxy_validation_volumetric_efficiency.pkl
output/experiments/20250918_002203/: 002203_dynamic_head_test_tpe_realistic.json  002203_dynamic_head_test_tpe_realistic.pkl
output/experiments/20250918_002205/: 002205_comprehensive_comparison_multi_algorithm.pkl
output/experiments/20250918_002209/: 002209_longterm_optimization_tpe_maintenance_optimization.json  (+1 more)
results/csv/: bep_prediction_summary.csv  dynamic_adaptation_summary.csv  dynamic_test_detailed.csv  proxy_correlation_summary.csv  proxy_validation_detailed.csv  static_test_detailed.csv  static_test_summary.csv
src/: commercial_pump_model.py  experiments.py  optimizers.py  proxy_functions.py  proxy_functions_gaussian.py  pump_model.py  utils.py  visualization.py
(+56 files in other folders)
