[project]
name = "tpe-pump-opt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "optuna>=3.0.0",
    "tqdm>=4.62.0",
    "pathlib>=1.0.1",
    "dataclasses>=0.6; python_version<'3.7'",
]
